2006-05-15  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: new stock icon support
	* src/gramps_main.py: new stock icon support
	* src/PageView.py: new stock icon support
	* src/images/stock_new-html.png: added
	* src/images/stock_delete-bookmark.png: added
	* src/images/stock_export.png: added
	* src/images/stock_edit-bookmark.png: added
	* src/images/stock_add-bookmark.png: added
	* src/images/stock_undo-history.png: added
	* src/images/stock_bookmark.png: added
	* src/DisplayTabs/_DataEmbedList.py: disable DND

2006-05-15  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py (save_as_activate): Use Save button in dialog.
	* src/GrampsDb/_DbUtils.py: import proper class.

2006-05-15  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs/_PersonEventEmbedList.py: fix selection of default type
	* src/Filters/__init__.py: add SidebarFilter, PersonSidebarFilter
	* src/Filters/_SidebarFilter.py: added
	* src/Filters/_PersonSidebarFilter.py: added
	* src/DataViews/_PersonView.py: cleaner interface to filters
	* src/plugins/RelCalc.py: cleaner interface to filters
	* src/PeopleModel.py: cleaner interface to filters
	* src/Selectors/_SelectPerson.py: cleaner interface to filters

2006-05-15  Alex Roitman  <shura@gramps-project.org>
	* src/Selectors/_Select*.py: Subclass from BaseSelector.
	* src/Selectors/Makefile.am: Ship new file.
	* src/Selectors/_BaseSelector.py: Add new file.

	* src/DataViews/_SourceView.py (edit,on_double_click): Catch exception.
	* configure.in: Generate new Makefile.
	* src/Makefile.am: adapt to new module.
	* src/Selectors: separate selectors in their own module.
	* src/Select*.py: move to Selectors.
	* src/DataViews/_FamilyView.py: Use new module.
	* src/Editors/_EditLdsOrd.py: Use new module.
	* src/Editors/_EditPersonRef.py: Use new module.
	* src/Editors/_EditFamily.py: Use new module.
	* src/DisplayTabs/_SourceEmbedList.py: Use new module.
	* src/DisplayTabs/_RepoEmbedList.py: Use new module.