@@ -159,47 +159,59 @@ def get_total(db):
            place_len + source_len + obj_len + repo_len
         
 def db_copy(from_db,to_db,callback):
-    uc = UpdateCallback(from_db,callback)
+    uc = UpdateCallback(callback)
     uc.set_total(get_total(from_db))
     
-    primary_tables = {
+    tables = {
         'Person': {'cursor_func': from_db.get_person_cursor,
-                   'table': to_db.person_map },
+                   'table': to_db.person_map,
+                   'sec_table' : to_db.id_trans },
         'Family': {'cursor_func': from_db.get_family_cursor,
-                   'table': to_db.family_map },
+                   'table': to_db.family_map,
+                   'sec_table' : to_db.fid_trans },
         'Event': {'cursor_func': from_db.get_event_cursor,
-                  'table': to_db.event_map },
+                  'table': to_db.event_map,
+                  'sec_table' : to_db.eid_trans },
         'Place': {'cursor_func': from_db.get_place_cursor,
-                  'table': to_db.place_map },
+                  'table': to_db.place_map,
+                  'sec_table' : to_db.pid_trans },
         'Source': {'cursor_func': from_db.get_source_cursor,
-                   'table': to_db.source_map },
+                   'table': to_db.source_map,
+                   'sec_table' : to_db.sid_trans },
         'MediaObject': {'cursor_func': from_db.get_media_cursor,
-                        'table': to_db.media_map },
+                        'table': to_db.media_map,
+                        'sec_table' : to_db.oid_trans },
         'Repository': {'cursor_func': from_db.get_repository_cursor,
-                       'table': to_db.repository_map },
+                       'table': to_db.repository_map,
+                       'sec_table' : to_db.rid_trans },
         }
-
 
     if to_db.__class__.__name__ == 'GrampsBSDDB':
         if to_db.UseTXN:
             add_data = add_data_txn
         else:
             add_data = add_data_notxn
+        update_secondary = update_secondary_empty
     else:
         add_data = add_data_dict
+        # For InMem databases, the secondary indices need to be
+        # created as we copy objects
+        update_secondary = update_secondary_inmem
 
     # Start batch transaction to use async TXN and other tricks
     trans = to_db.transaction_begin("",batch=True)
 
-    for table_name in primary_tables.keys():
-        cursor_func = primary_tables[table_name]['cursor_func']
-        table = primary_tables[table_name]['table']
+    for table_name in tables.keys():
+        cursor_func = tables[table_name]['cursor_func']
+        table = tables[table_name]['table']
+        sec_table = tables[table_name]['sec_table']
 
         cursor = cursor_func()
         item = cursor.first()
         while item:
             (handle,data) = item
             add_data(to_db,table,handle,data)
+            update_secondary(sec_table,handle,data)
             item = cursor.next()
             uc.update()
         cursor.close()
@@ -213,6 +225,7 @@ def db_copy(from_db,to_db,callback):
         data = from_db.metadata.get(handle)
         to_db.metadata[handle] = data
 
+
 def add_data_txn(db,table,handle,data):
     the_txn = db.env.txn_begin()
     table.put(handle,data,txn=the_txn)
@@ -223,3 +236,9 @@ def add_data_notxn(db,table,handle,data):
 
 def add_data_dict(db,table,handle,data):
     table[handle] = data
+
+def update_secondary_empty(sec_table,handle,data):
+    pass
+
+def update_secondary_inmem(sec_table,handle,data):
+    sec_table[str(data[1])] = str(handle)
